--- a/products.html
+++ b/products.html
@@ -26,12 +26,12 @@
         </div>
       </nav>
 </header>
-<main>
+<main class="main">
   <h1>products page</h1>
   <input class="search" placeholder="Search products..."/>
   <div class="product-container"></div>
 </main>
-    <script src="js/products.js" type="module" ></script>
+    <script src="js/index.js" type="module" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
