--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               <a class="nav-link" href="products.html">Products</a>
               <a class="nav-link" href="cartpage.html">Cart</a>
+              <a class="nav-link" href="login.html">Login</a>
             </div>
           </div>
         </div>
