--- a/products.html
+++ b/products.html
@@ -9,31 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">LOGO</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link"  href="index.html">Home</a>
-              <a class="nav-link active" aria-current="page" href="products.html">Products</a>
-              <a class="nav-link" href="cartpage.html">Cart</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-</header>
-<main class="main">
   <div class="container">
+  <div class="menu-container"></div>
   <h1>products page</h1>
   <input class="search" placeholder="Search products..."/>
   <div class="product-container"></div>
 </div>
-</main>
-    <script src="js/index.js" type="module" ></script>
+    <script src="js/products.js" type="module" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
