--- a/edit.html
+++ b/edit.html
@@ -37,6 +37,8 @@
             <div>
                 <button id="update">Update</button>
             </div>
+
+            <div class="delete-container"></div>
         </form>
     </div>
     <script src="js/edit.js" type="module"></script>
