--- a/edit.html
+++ b/edit.html
@@ -7,13 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body> 
+    <div class="menu-container"></div>
     <div class="container">
-        <div class="menu-container"></div>
         <h1>Edit Product</h1>
-
         <div class="loading">Loading product...</div>
-
         <form class="edit-form">
             <div class="message-container"></div>
 
@@ -39,6 +37,28 @@
             <div class="delete-container"></div>
         </form>
     </div>
+    <footer>
+        <div class="footer_content">
+        <div class="follow">
+            <h3>Follow us</h3>
+        </div>
+        </div>
+        <div class="entrance">
+            <h3>Address</h3>
+            <p>3325 Sunrise Road</p>
+            <p>Las Vegas,</p>
+            <p>Nevada,</p>
+            <p>89107</p>
+        </div>
+        <div class="information">
+            <h3>Information</h3>
+            <p>Privacy policy</p>
+            <p>Terms & conditions</p>
+            <p>Accessibility</p>
+        </div>
+      </div>
+      <p>&copy; Copyright  </p>
+      </footer>
     <script src="js/edit.js" type="module"></script>
 </body>
 </html>
