--- a/products.html
+++ b/products.html
@@ -8,12 +8,34 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="container">
   <div class="menu-container"></div>
-  <h1>products page</h1>
+  <div class="container">
+  <h1>Products page</h1>
   <input class="search" placeholder="Search products..."/>
   <div class="product-container"></div>
 </div>
+<footer>
+  <div class="footer_content">
+  <div class="follow">
+      <h3>Follow us</h3>
+  </div>
+  </div>
+  <div class="entrance">
+      <h3>Address</h3>
+      <p>3325 Sunrise Road</p>
+      <p>Las Vegas,</p>
+      <p>Nevada,</p>
+      <p>89107</p>
+  </div>
+  <div class="information">
+      <h3>Information</h3>
+      <p>Privacy policy</p>
+      <p>Terms & conditions</p>
+      <p>Accessibility</p>
+  </div>
+</div>
+<p>&copy; Copyright  </p>
+</footer>
     <script src="js/products.js" type="module" ></script>
 </body>
 </html>
