--- a/login.html
+++ b/login.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="menu-container"></div>
 <div class="container">
-    <div class="menu-container"></div>
-
     <h1>Login</h1>
-
     <form>
         <div class="message-container"></div>
 
@@ -24,9 +22,31 @@
             <label for="password"> Password</label>
             <input id="password" />
         </div>
-        <button>Submit</button>
+        <button>Login</button>
     </form>
 </div>
+<footer>
+    <div class="footer_content">
+    <div class="follow">
+        <h3>Follow us</h3>
+    </div>
+    </div>
+    <div class="entrance">
+        <h3>Address</h3>
+        <p>3325 Sunrise Road</p>
+        <p>Las Vegas,</p>
+        <p>Nevada,</p>
+        <p>89107</p>
+    </div>
+    <div class="information">
+        <h3>Information</h3>
+        <p>Privacy policy</p>
+        <p>Terms & conditions</p>
+        <p>Accessibility</p>
+    </div>
+  </div>
+  <p>&copy; Copyright  </p>
+  </footer>
     <script src="js/login.js" type="module"></script>
 </body>
 </html>
