--- a/add.html
+++ b/add.html
@@ -19,6 +19,12 @@
                 <input id="title" />
             </div>
             <div>
+                <label for="url"> Upload image:</label>
+                <input type="url" name="url" id="url"
+                 pattern="https://.*" size="30"
+                 required>
+            </div>
+            <div>
                 <label for="price">Price</label>
                 <input id="price" />
             </div>
