--- a/add.html
+++ b/add.html
@@ -19,10 +19,8 @@
                 <input id="title" />
             </div>
             <div>
-                <label for="url"> Upload image:</label>
-                <input type="url" name="url" id="url"
-                 pattern="https://.*" size="30"
-                 required>
+                <label for="url"> Upload image</label>
+                <input type="url" name="url" id="urlInput">
             </div>
             <div>
                 <label for="price">Price</label>
