--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body> 
-  <div class="menu-container"></div>
+    <header>
+        <div class="menu-container"></div>
+    </header>
   <div class="container">
   <div class="hero-banner"></div>
   <div class="featured-products"></div>
