--- a/edit.html
+++ b/edit.html
@@ -20,6 +20,10 @@
                 <input id="title" />
             </div>
             <div>
+                <label for="url"> Upload image</label>
+                <input type="url" name="url" id="urlInput">
+            </div>
+            <div>
                 <label for="price">Price</label>
                 <input id="price" />
             </div>
