--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class="menu-container"></div>
     </header>
   <div class="container">
-  <div class="hero-banner"></div>
+   <h1>Be fashionable</h1>
+  <div class="banner"></div>
   <div class="featured-products"></div>
 </div>
 <footer>
