--- a/products.html
+++ b/products.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="menu-container"></div>
+    <header>
+        <div class="menu-container"></div>
+    </header>
   <div class="container">
   <h1>Products page</h1>
+  <i class="fa-solid fa-cart-shopping"></i>
   <input class="search" placeholder="Search products..."/>
   <div class="product-container"></div>
 </div>
