--- a/productdetails.html
+++ b/productdetails.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="menu-container"></div>
+  <header>
+    <div class="menu-container"></div>
+  </header>
   <div class="container">
   <div class="spesific-product"></div>
 </div>
