--- a/login.html
+++ b/login.html
@@ -5,33 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="menu-container"></div>
     </header>
-<div class="container">
-    <h1>Login</h1>
+    <div class="container">
     <form>
+        <h1>Sign in</h1>
         <div class="message-container"></div>
 
         <div>
-            <label for="username"> Username/email</label>
+            <label for="username"> Email</label>
             <input id="username" />
         </div>
         <div>
             <label for="password"> Password</label>
             <input id="password" />
         </div>
-        <button>Login</button>
+        <button>Sign in</button>
     </form>
 </div>
 <footer>
     <div class="footer_content">
     <div class="follow">
         <h3>Follow us</h3>
+        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+        <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+        <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
     </div>
     </div>
     <div class="entrance">
