--- a/products.html
+++ b/products.html
@@ -21,12 +21,14 @@
     <header>
         <div class="menu-container"></div>
     </header>
+    <main class="mainy">
   <div class="container">
   <h1>Products page</h1>
   <i class="fa-solid fa-cart-shopping"></i>
   <input class="search" placeholder="Search products..."/>
   <div class="product-container"></div>
 </div>
+</main>
 <footer>
   <div class="footer_content">
   <div class="follow">
