--- a/cartpage.html
+++ b/cartpage.html
@@ -24,6 +24,9 @@
   <div class="container">
     <h1>Cart page</h1>
     <div class="cart"></div>
+    <div id="total">
+      <!-- Total here -->
+    </div>
   </div>
   <footer>
     <div class="footer_content">
