--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <div class="container">
    <h1>Be fashionable</h1>
   <div class="banner"></div>
+  <h2>Featured products</h2>
   <div class="featured-products"></div>
 </div>
 <footer>
